cleaned todo comments
