# server/swagger.json
@@ -675,6 +675,9 @@
 			},
 			"LanguageDataItem": {
 				"properties": {
+					"audioFile": {
+						"type": "string"
+					},
 					"order": {
 						"type": "number",
 						"format": "double"
@@ -696,6 +699,7 @@
 					}
 				},
 				"required": [
+					"audioFile",
 					"order",
 					"alt",
 					"imageUrl",
@@ -1441,7 +1445,7 @@
 														"28e74a16-6114-4c50-815e-631cfd7b3a5e",
 														"c22b3077-b670-4ac8-8f21-a0a10125cb9e"
 													],
-													"imageUrl": "https://images.pexels.com/photos/3807561/pexels-photo-3807561.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1",
+													"imageUrl": "photo-path/3807561/3807561.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1",
 													"imageAlt": "image alt",
 													"isStarter": true,
 													"name": "Family",
@@ -1496,7 +1500,7 @@
 													"block": {
 														"audioFile": ":path-to-storage/stories/:lang/:story/:block.mp3",
 														"id": "28e74a16-6114-4c50-815e-631cfd7b3a5e",
-														"imageUrl": "https://images.pexels.com/photos/4700108/pexels-photo-4700108.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1",
+														"imageUrl": "photo-path/4700108/4700108.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1",
 														"imageAlt": "image alt",
 														"isStarter": false,
 														"name": "Names",
@@ -1553,7 +1557,7 @@
 														"idsItemsDependentOnThis": [
 															"f876cde3-feaa-41dc-9720-d18f8eb975a9"
 														],
-														"imageUrl": "https://images.pexels.com/photos/5912615/pexels-photo-5912615.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1",
+														"imageUrl": "photo-path/5912615/5912615.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1",
 														"imageAlt": "image alt",
 														"isStarter": false,
 														"name": "Pronouns",
@@ -1882,7 +1886,7 @@
 													"28e74a16-6114-4c50-815e-631cfd7b3a5e",
 													"c22b3077-b670-4ac8-8f21-a0a10125cb9e"
 												],
-												"imageUrl": "https://images.pexels.com/photos/3807561/pexels-photo-3807561.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1",
+												"imageUrl": "photo-path/3807561/3807561.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1",
 												"imageAlt": "image alt",
 												"isStarter": true,
 												"name": "Family",
@@ -2359,7 +2363,7 @@
 														"afc7585d-f9e1-419b-a213-4a7cf66f0d14",
 														"cf315d89-e763-41fb-a111-8d43bc8e0b96"
 													],
-													"imageUrl": "some url/3807395/pexels-photo-3807395.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1",
+													"imageUrl": "some url/3807395/3807395.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1",
 													"imageAlt": "image alt",
 													"name": "My family #1",
 													"numOfBlocksCompleted": 7,
@@ -2407,7 +2411,7 @@
 																	"28e74a16-6114-4c50-815e-631cfd7b3a5e",
 																	"c22b3077-b670-4ac8-8f21-a0a10125cb9e"
 																],
-																"imageUrl": "some url/3807561/pexels-photo-3807561.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1",
+																"imageUrl": "some url/3807561/3807561.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1",
 																"imageAlt": "image alt",
 																"isStarter": true,
 																"name": "Family",
@@ -2579,25 +2583,28 @@
 												"id": "ru",
 												"name": "Russian",
 												"active": true,
-												"imageUrl": "https://images.pexels.com/photos/3810971/pexels-photo-3810971.jpeg",
+												"imageUrl": "photo-path/3810971/3810971.jpeg",
 												"alt": "Russian church image.",
-												"order": 0
+												"order": 0,
+												"audioFile": "path-to-audio"
 											},
 											{
 												"id": "fr",
 												"name": "French",
 												"active": true,
-												"imageUrl": "https://images.pexels.com/photos/4983083/pexels-photo-4983083.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1",
+												"imageUrl": "photo-path/4983083/4983083.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1",
 												"alt": "French Eiffel Tower and a flower by.",
-												"order": 1
+												"order": 1,
+												"audioFile": "path-to-audio"
 											},
 											{
 												"id": "de",
 												"name": "German",
 												"active": true,
-												"imageUrl": "https://images.pexels.com/photos/109629/pexels-photo-109629.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1",
+												"imageUrl": "photo-path/109629/109629.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1",
 												"alt": "German flag image.",
-												"order": 2
+												"order": 2,
+												"audioFile": "path-to-audio"
 											}
 										]
 									}
@@ -2646,7 +2653,7 @@
 													"afc7585d-f9e1-419b-a213-4a7cf66f0d14",
 													"cf315d89-e763-41fb-a111-8d43bc8e0b96"
 												],
-												"imageUrl": "some url/3807395/pexels-photo-3807395.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1",
+												"imageUrl": "some url/3807395/3807395.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1",
 												"imageAlt": "image alt",
 												"name": "My family #1",
 												"numOfBlocksCompleted": 7,
@@ -2694,7 +2701,7 @@
 																"28e74a16-6114-4c50-815e-631cfd7b3a5e",
 																"c22b3077-b670-4ac8-8f21-a0a10125cb9e"
 															],
-															"imageUrl": "some url/3807561/pexels-photo-3807561.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1",
+															"imageUrl": "some url/3807561/3807561.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1",
 															"imageAlt": "image alt",
 															"isStarter": true,
 															"name": "Family",
@@ -2847,7 +2854,7 @@
 												"afc7585d-f9e1-419b-a213-4a7cf66f0d14",
 												"cf315d89-e763-41fb-a111-8d43bc8e0b96"
 											],
-											"imageUrl": "some url/3807395/pexels-photo-3807395.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1",
+											"imageUrl": "some url/3807395/3807395.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1",
 											"imageAlt": "image alt",
 											"name": "My family #1",
 											"numOfBlocksCompleted": 7,
@@ -2895,7 +2902,7 @@
 															"28e74a16-6114-4c50-815e-631cfd7b3a5e",
 															"c22b3077-b670-4ac8-8f21-a0a10125cb9e"
 														],
-														"imageUrl": "some url/3807561/pexels-photo-3807561.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1",
+														"imageUrl": "some url/3807561/3807561.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1",
 														"imageAlt": "image alt",
 														"isStarter": true,
 														"name": "Family",
